Fix post paragraph spacing

--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -45,6 +45,10 @@ h3 {
   font-weight: 700;
 }
 
+p {
+  margin-bottom: 15px;
+}
+
 ul {
   margin: 1em 0;
   list-style: disc;
@@ -160,6 +164,10 @@ nav h2 a {
 
 #post {
   margin-top: 10px;
+  margin-bottom: 15px;
+}
+
+#post h1, h2, h3, p {
   margin-bottom: 15px;
 }
 
